recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:13: error: not found: value lenght
    tree(steps - 1, shrink * lenght, angle, shrink)
                             ^